# chapps

./: .gitignore  README.md  log.txt  pyproject.toml  requirements.txt  rxconfig.py
chapps/: __init__.py  chapps.py  embedding_utils.py  firebase_utils.py  michael_state.py  openai_utils.py  state.py  styles.py  test.py
chapps/components/: chapp_card.py  sidebar.py
chapps/pages/: __init__.py  chappConfig.py  chapp_config.py  createNewChapps.py  create_new_chapps.py  dashboard.py  exploreChapps.py  explore_chapps.py  index.py  loading.py  login.py  run_chapp.py  settings.py
chapps/templates/: template.py
