[tool.poetry]
name = "chapps"
version = "0.1.0"
description = ""
authors = ["ShinnosukeUesaka <shinnosuke.uesaka@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
reflex = "^0.3.1"
firebase = "^4.0.1"
firebase-admin = "^6.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
